@@ -1,6 +1,7 @@
 2013-04-16         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.c: Regenerated from bison 2.7.1.
+	* command.c: Ditto.
 	* dfa.h, dfa.c: Minor edits to sync with GNU grep.
 	* gettext.h: Sync with gettext 0.18.2.1.
 	* random.h: Remove obsolete __P macro and use. Update copyright.
